Fix Reply link width on mobile
Otherwise it gets full width and looks off with the new styles

--- a/assets/src/scss/pages/post/_comments-block.scss
+++ b/assets/src/scss/pages/post/_comments-block.scss
@@ -54,6 +54,7 @@
     font-weight: bold;
     font-size: 14px;
     margin-top: $sp-2;
+    width: fit-content;
     @include shared-link-styles;
 
     &:hover {
@@ -69,7 +70,6 @@
         font-family: var(--font-family-primary);
         font-weight: var(--font-weight-regular);
       }
-
       float: right;
       margin-top: 0;
 
